5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1596_825.log
== TEST (2019-04-02 02:03:28) 
-- CODE:
from math import * 
ra=float(input("raio")
area=pi*ra**2
volume=4/3*pi*ra**3
print(round(ra, 3))			


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    area=pi*ra**2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:03:57) 
-- CODE:
from math import * 
ra=float(input("raio")
area=pi*raio**2
volume=4/3*pi*ra**3
print(round(ra, 3))			


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    area=pi*raio**2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:03:59) 
-- CODE:
from math import * 
ra=float(input("raio")
area=pi*raio**2
volume=4/3*pi*ra**3
print(round(ra, 3))			


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    area=pi*raio**2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:05:27) 
-- CODE:
from math import * 
ra=float(input("raio")
area=pi * raio**2
volume=4/3*pi*ra**3
print(round(ra, 3))			


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    area=pi * raio**2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:06:06) 
-- CODE:
from math import * 
ra=float(input("raio")
area=raio**2 * pi*
volume=4/3*pi*ra**3
print(round(ra, 3))			


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    area=raio**2 * pi*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:06:13) 
-- CODE:
from math import * 
ra=float(input("raio")
area=raio**2 * pi
volume=4/3*pi*ra**3
print(round(ra, 3))			


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    area=raio**2 * pi
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:06:13) 
-- CODE:
from math import * 
ra=float(input("raio")
area=raio**2 * pi
volume=4/3*pi*ra**3
print(round(ra, 3))			


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    area=raio**2 * pi
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:06:14) 
-- CODE:
from math import * 
ra=float(input("raio")
area=raio**2 * pi
volume=4/3*pi*ra**3
print(round(ra, 3))			


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    area=raio**2 * pi
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:06:47) 
-- CODE:
from math import * 
ra=float(input("raio")
area=ra**2 * pi
volume=4/3*pi*ra**3
print(round(ra, 3))			


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    area=ra**2 * pi
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:06:59) 
-- CODE:
from math import * 
ra=float(input("raio")
a=ra**2 * pi
volume=4/3*pi*ra**3
print(round(ra, 3))			


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    a=ra**2 * pi
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:08:23) 
-- CODE:
from math import * 
pi
ra=float(input("raio")
a=ra**2 * pi
volume=4/3*pi*ra**3
print(round(ra, 3))			


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 4
    a=ra**2 * pi
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:08:24) 
-- CODE:
from math import * 
pi
ra=float(input("raio")
a=ra**2 * pi
volume=4/3*pi*ra**3
print(round(ra, 3))			


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 4
    a=ra**2 * pi
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:20) 
-- CODE:
from math import * 
r=float(input("raio")
a=r**2 * pi
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    a=r**2 * pi
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:41) 
-- CODE:
from math import * 
r=float(input("raio")
a=r ** 2 * pi
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    a=r ** 2 * pi
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:42) 
-- CODE:
from math import * 
r=float(input("raio")
a=r ** 2 * pi
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    a=r ** 2 * pi
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:50) 
-- CODE:
from math import * 
r=float(input("raio")
a= r ** 2 * pi
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    a= r ** 2 * pi
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:44:32) 
-- CODE:
from math import * 
r=float(input("raio")
a= r ** 2 * pi
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    a= r ** 2 * pi
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:44:47) 
-- CODE:
from math import * 
r=float(input("raio")
a= r ** 2 * pi*
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    a= r ** 2 * pi*
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:45:07) 
-- CODE:
from math import * 
r=float(input("raio")
a= r**2*pi
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    a= r**2*pi
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:45:13) 
-- CODE:
from math import * 
r=float(input("raio")
a=r**2*pi
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    a=r**2*pi
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:46:51) 
-- CODE:
from math import * 
r=float(input("raio")
a=pi*r**2
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 3
    a=pi*r**2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:47:35) 
-- CODE:
r=float(input("raio")
from math import * 		  
a=pi*r**2
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 2
    from math import * 		  
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:47:42) 
-- CODE:
r=float(input("raio")
from math import*
a=pi*r**2
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 2
    from math import*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:23) 
-- CODE:
r=float(input("raio")
import math.pi
a=pi*r**2
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 2
    import math.pi
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:51) 
-- CODE:
r=float(input("raio")
import math.pi import*
a=pi*r**2
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 2
    import math.pi import*
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:54) 
-- CODE:
r=float(input("raio")
import math.pi import *
a=pi*r**2
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  


#raio = raio**2 * pi*
-- ERROR:
File "XXXX", line 2
    import math.pi import *
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:11) 
-- CODE:
r=float(input("raio")
import math.pi import *
a=pi*r**2
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  



-- ERROR:
File "XXXX", line 2
    import math.pi import *
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:53:19) 
-- CODE:
r = float(input("raio: "))
from math import *
a=pi*r**2
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  



-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:53:51) 
-- CODE:
r = float(input("raio: "))
from math import *
a=pi*r**2
volume=4/3*pi*r**3
print(round(a, 3))	
print(round(volume, 3))		  



-- EXECUTION TIME:
0.213694
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
